# INFI

./: .gitignore  CMakeLists.txt  Log.txt  MES.code-workspace  Objetivos.txt  README.md  cin.py  constants.yaml  database.py  dump.sql  factory.py  main.py  nodes.js  orders.py  relationalmodel.txt  req.txt  requirements.txt  scheduling.py  test.py  transformations.py  utils.py
ERP/: CMakeLists.txt
ERP/include/: XML_utils.hpp  dataBase.hpp
ERP/src/: UDP_comms.cpp  XML_utils.cpp  dataBase.cpp  main.cpp
MES/: CMakeLists.txt  db.txt  db_template.txt
MES/include/: UDP_comms.hpp  database.h  warehouseIn.hpp
MES/src/: auxiliar.txt  database.cpp  main.cpp  warehouseIn.cpp
UDP/: CMakeLists.txt
UDP/src/: main.cpp
communications/: database.py  plc_communications.py
mes/: __init__.py  clock.py  database.py  expedition_order.py  gen_cin.py  manager.py  persistence.py  plccommunications.py  production_order.py  recipes.py  scheduling.py  supplier.py  transformations.py
modules/communications/: database.py  plc_communications.py
modules/mes/: manager.py  production_order.py  scheduling.py  transformations.py
modules/shopfloor/: gen_cin.py  recipes.py
shopfloor/: gen_cin.py
